packages/core/src/navigation/_navigation-styles.scss
/* ... */
.#{$footer-prefix} {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: spacing.semantic-variable(padding, vertical, base)
    spacing.semantic-variable(padding, horizontal, comfort-fixed)
    spacing.semantic-variable(padding, vertical, comfort);
  gap: spacing.semantic-variable(gap, tight-fixed);

  &__icons {
    display: flex;
    align-items: center;
    gap: spacing.semantic-variable(gap, tiny);
  }

  &--collapsed {
    display: flex;
    flex-direction: column-reverse;
    align-items: flex-start;

    .#{$footer-prefix}__icons {
      display: flex;
      flex-direction: column;
    }

    .#{$user-menu-prefix} {
      padding: 0;
      width: 100%;

      &__content {
        & > :not(:first-child) {
          display: none;
        }
      }
    }
  }
}

.#{$option-prefix} {
  align-items: center;
  box-sizing: border-box;
  display: grid;
  flex-shrink: 1;
  gap: spacing.semantic-variable(gap, tight);
  height: unset;
  width: 100%;

  &--hidden {
    display: none;
  }

  &__content {
    align-items: center;
    border-radius: radius.variable(base);
    border: none;
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    outline: none;
    overflow: hidden;
    width: 100%;
    gap: spacing.semantic-variable(gap, tight);
    padding: spacing.semantic-variable(padding, vertical, tight)
      spacing.semantic-variable(padding, horizontal, tight-fixed);
    transition: transition.standard(background-color, fast), transition.standard(color, fast);
    text-decoration: none;

    .#{$option-prefix}__title-wrapper {
      flex-shrink: 1;
      margin-right: auto;
      min-width: 0;
      overflow: hidden;
      transition: transition.standard(opacity, fast);

      &:empty {
        display: none;
      }
    }

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-primary-highlight, (line-height));

      color: palette.semantic-variable(text, neutral-solid);
      display: block;
      line-height: #{$option-icon-size};
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .#{$option-prefix}__icon {
      color: palette.semantic-variable(icon, neutral);
      height: #{$option-icon-size};
      width: #{$option-icon-size};
    }

    .#{$option-prefix}__toggle-icon {
      color: palette.semantic-variable(icon, neutral);
      height: spacing.semantic-variable(size, element, slim);
      width: spacing.semantic-variable(size, element, slim);
    }

    &:hover {
      .#{$option-prefix}__icon,
      .#{$option-prefix}__toggle-icon {
        color: palette.semantic-variable(icon, neutral-solid);
      }

      background-color: palette.semantic-variable('background', neutral-faint);
    }

    &:focus-visible {
      box-shadow: effect.variable(focus, primary);
    }
  }

  &--active:not(.#{$option-prefix}--open):not(.#{$option-prefix}--basic) {
    & > .#{$option-prefix}__content {
      background-color: palette.semantic-variable('background', brand-ghost);

      .#{$option-prefix}__title {
        color: palette.semantic-variable(text, neutral-solid);
      }

      .#{$option-prefix}__icon {
        color: palette.semantic-variable(icon, neutral-solid);
      }
    }
  }

  &--active.#{$option-prefix}--open {
    & > .#{$option-prefix}__content {
      .#{$option-prefix}__title {
        color: palette.semantic-variable(text, brand);
      }

      .#{$option-prefix}__icon {
        color: palette.semantic-variable(icon, brand);
      }

      .#{$option-prefix}__toggle-icon {
        color: palette.semantic-variable(icon, neutral-solid);
      }
    }
  }

  &--active.#{$option-prefix}--basic {
    & > .#{$option-prefix}__content {
      background-color: palette.semantic-variable('background', brand-faint);

      .#{$option-prefix}__title {
        color: palette.semantic-variable(text, brand-solid);
      }

      .#{$option-prefix}__icon {
        color: palette.semantic-variable(icon, brand-solid);
      }
    }
  }

  &__group {
    @include utils.reset();

    display: grid;
    gap: spacing.semantic-variable(gap, tight);
  }


  &--level-1 {
    margin-left: 0;
  }

  &--level-2 {
    margin-left: spacing.semantic-variable(padding, horizontal, relaxed);
    width: calc(
      100% - spacing.semantic-variable(padding, horizontal, relaxed)
    );

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-secondary, (line-height));
    }
  }

  &--level-3 {
    margin-left: spacing.semantic-variable(padding, horizontal, breath);
    width: calc(100% - spacing.semantic-variable(padding, horizontal, breath));

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-secondary, (line-height));
    }
  }

  &--collapsed {
    .#{$option-prefix}__children-wrapper {
      display: none;
    }

    .#{$option-prefix}__content {
      margin: 0 auto;
      max-width: 100%;

      .#{$option-prefix}__toggle-icon,
      .mzn-badge {
        display: none;
      }
    }

    &.#{$option-prefix}--active.#{$option-prefix}--open {
      & > .#{$option-prefix}__content {
        background-color: palette.semantic-variable('background', brand-faint);

        .#{$option-prefix}__icon {
          color: palette.semantic-variable(icon, neutral-solid);
        }
      }
    }

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-secondary, (line-height));

      text-overflow: clip;
    }
  }
}
/* ... */

